css/styles.css
/* ... */
#cardwrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

#cardwrapper > i {
  width: 300px;
  margin: 1em;
}

.card {
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: flex-start;
  width: 300px;
  height: 420px;
  box-shadow: -1px 2px 4px rgba(0,0,0,0.4), 1px -2px 4px rgba(255,255,255,0.7);
  border-radius: 20px;
  /* border: solid 1px #b0b0b0; */
  margin: 2em 1em;
  filter: saturate(0.5);
  transition: all 0.5s ease-in-out 0s;
}

.card.hidden {
  display: none;
}

.card-header {
  border-radius: 10px;
  margin: 0.5em 0.5em 0.1em 0.5em;
  padding: 0.5em;
  box-shadow: inset -5px 5px 6px #a7a7a7,
  inset 5px -5px 6px #d9d9d9;
  transition: all 0.5s ease-in-out 0s;
}

.card-header > img {
  opacity: 100%;
  width: 100%;
  border-radius: 5px;
  transition: all 0.5s ease-in-out 0s;
}

.card-content {
  display: flex;
  flex-direction: column;
  border-radius: 20px;
  padding: 0.25em 0.75em;
}

#card-tech {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 0.25em 0.75em;
}

#card-tech object {
  height: 20px;
  margin: 0 0.5rem;
  filter: contrast(30%);
}

#card-tag-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* align-self: end; */
  margin-bottom: 0.2em;
}

#card-tag-wrapper > div {
  display: flex;
}

#card-tag-wrapper > p {
  color: #5D5E60;
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
}

#card-tag {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 75px;
  height: 30px;
  box-shadow: inset -5px 5px 6px #a7a7a7, inset 5px -5px 6px #d9d9d9;
  border-radius: 10px;
  background-color: #c0c0c0;
  color: darkcyan;
  font-size: 8px;
  font-weight: bold;
  text-align: center;
  text-transform: uppercase;
  align-self: end;
  margin: 0.5em;
}

#card-headline {
  color: black !important;
  font-weight: bold;
  font-size: 16px;
  margin: 0;
}

#card-info {
  font-size: 16px;
  color: black !important;
  margin: 0;
}

#card-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  position: absolute;
  bottom: -40px;
  cursor: pointer;
  text-transform: uppercase;
  background-color: #c0c0c0;
  width: 70px;
  padding: 18px 20px;
  margin: 0.5em .2em;
  text-align: center;
  border-radius: 10px;
  box-shadow: -1px 2px 5px rgba(0,0,0,0.4), 1px -2px 5px rgba(255,255,255,0.7);
  transition: all .2s ease-in-out;
}

.card-btn-wrapper #card-btn:nth-child(1) {
  left: 30px;
}

.card-btn-wrapper #card-btn:nth-child(2) {
  right: 30px;
}

#card-btn > a, #card-btn > a:visited {
  width: 100%;
  color: grey;
  font-size: 16px;
  font-weight: bold;
  display: inline-block;     
  position: relative;    
  z-index: 1;     
  padding: 18px 32px;   
  margin: -18px -32px;
  transition: all .2s ease-in-out;
}

#card-btn:active {
  box-shadow: inset -2px 2px 5px #a7a7a7,
  inset 2px -2px 5px #d9d9d9;
}

details[open] > div {
  animation-name: slideDown;
  animation-duration: 0.6s;
  animation-fill-mode: forwards;
}

details[open] > div > .filter-btn {
  opacity: 0;
  animation-name: showContent;
  animation-duration: 0.6s;
  animation-delay: 0.2s;
  animation-fill-mode: forwards;
}

summary {
  display: flex;
  cursor: pointer;
  color: #c0c0c0;
  font-weight: bold;
  font-family: sans-serif;
  text-transform: uppercase;
  font-size: 1.5em;
  text-shadow: -0.025em 0.025em 0.056em rgba(0,0,0,0.4), 0.025em -0.025em 0.056em rgba(255,255,255,0.7);
  transition: all 0.5s ease-in-out 0s;
  transition: .3s;
  user-select: none;
  margin: 0.5em;
}

.rotate-on-hover {
  transition: transform 0.3s;
  transform-origin: center;
}

summary:hover .rotate-on-hover {
  transform: rotate(180deg);
}

details[open] .rotate-on-hover {
  display: none;
}

details[open] > summary::before {
  content :"−"
}

@keyframes slideDown {
  from {
    opacity: 0;
    height: 0;
    padding: 0;
  }

  to {
    opacity: 1;
    height: var(--contentHeight);
    padding: 20px;
  }
}

@keyframes showContent {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.filter-btn-wrapper {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0.7em;
}

.filter-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
  background-color: #c0c0c0;
  font-weight: bold;
  text-align: center;
  text-transform: uppercase;
  align-self: end;
  margin: 0.5em;
  width: 100px !important;
  height: 45px !important;
  color: rgb(105, 105, 105) !important;
  box-shadow: -1px 2px 5px rgba(0,0,0,0.4), 1px -2px 5px rgba(255,255,255,0.7) !important;
  font-size: 10px !important;
}

.filter-btn.active {
  color: darkcyan !important;
  /* background-color: #228dff !important; */
  box-shadow: inset -5px 5px 6px #a7a7a7, inset 5px -5px 6px #d9d9d9 !important;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
}

/* Keyframes for Neon-Effect */
/* https://codepen.io/FelixRilling/pen/oNNLMb */
@keyframes neon1 {
  from {
    text-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #ff1177,
      0 0 25px #ff1177, 0 0 30px #ff1177, 0 0 40px #ff1177, 0 0 60px #ff1177;
  }
  to {
    text-shadow: 0 0 1px #fff, 0 0 3px #fff, 0 0 7px #fff, 0 0 10px #ff1177,
      0 0 15px #ff1177, 0 0 20px #ff1177, 0 0 25px #ff1177, 0 0 30px #ff1177;
  }
}
/* ... */

